Add calculate_bmr
