# app/models/bmr_calculation.rb
@@ -1,0 +1,5 @@
+class BmrCalculation < ApplicationRecord
+  belongs_to :patient
+
+  validates :formula, inclusion: { in: %w[mifflin harris] }
+end
