# db/schema.rb
@@ -1,5 +1,27 @@
-ActiveRecord::Schema[7.2].define(version: 2025_09_26_225619) do
+# This file is auto-generated from the current state of the database. Instead
+# of editing this file, please use the migrations feature of Active Record to
+# incrementally modify your database, and then regenerate this schema definition.
+#
+# This file is the source Rails uses to define your schema when running `bin/rails
+# db:schema:load`. When creating a new database, `bin/rails db:schema:load` tends to
+# be faster and is potentially less error prone than running all of your
+# migrations from scratch. Old migrations may fail to apply correctly if those
+# migrations use external dependencies or application code.
+#
+# It's strongly recommended that you check this file into your version control system.
+
+ActiveRecord::Schema[7.2].define(version: 2025_09_28_135559) do
+  # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
+
+  create_table "bmr_calculations", force: :cascade do |t|
+    t.bigint "patient_id", null: false
+    t.string "formula", null: false
+    t.float "result", null: false
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index ["patient_id"], name: "index_bmr_calculations_on_patient_id"
+  end
 
   create_table "doctors", force: :cascade do |t|
     t.string "first_name", null: false
@@ -24,4 +46,6 @@ ActiveRecord::Schema[7.2].define(version: 2025_09_26_225619) do
     t.datetime "updated_at", null: false
     t.index ["first_name", "last_name", "middle_name", "birthday"], name: "index_patients_on_name_and_birthday", unique: true
   end
+
+  add_foreign_key "bmr_calculations", "patients"
 end
